partman-partitioning (56) UNRELEASED; urgency=low

  [ Stephen R. Marenka]
  * Add m68k/atari support.

 -- Stephen R. Marenka <smarenka@debian.org>  Sat, 12 Jan 2008 17:50:50 -0600

partman-partitioning (55) unstable; urgency=low

  * Major whitespace cleanup and a few minor coding style fixes.
  * Source base.sh from resize.sh instead of the parent script.
  * Use new function library ./lib/commit.sh. Requires partman-base (>= 115).
  * resize.sh: call device_cleanup_partitions() to ensure we remove obsolete
    partition info after committing changes (for non-virtual partitions).
    Requires: partman-base (>= 115).

  [ Updated translations ]
  * Amharic (am.po) by tegegne tefera
  * Korean (ko.po) by Changwoo Ryu
  * Malayalam (ml.po) by Praveen|പ്രവീണ്‍ A|എ

 -- Frans Pop <fjp@debian.org>  Sat, 29 Dec 2007 22:15:28 +0100

partman-partitioning (54) unstable; urgency=low

  [ Frans Pop ]
  * Moved definitions.sh to ./lib/base.sh.
  * Move resize.sh to ./lib/resize.sh.
  * Reorganization of partition label related code:
    - add new function library ./lib/disk-label.sh to include the function
      default_disk_label (previously in definitions.sh) and a new function
      create_new_label (factored out from storage_device/label/do_option)
    - add init.d/unsupported previously in partman-base
    - add partman/*_label templates previously in partman-base
    Part of this change was originally suggested by Jérémy Bobbio.
  * disk-label.sh: allow not to prompt for new disk label if default is valid
    (for use during guided partitioning).
  * disk-label.sh: remove existing LVM data from the device before creating a
    new disk label; this is now also done if a new disk label is created
    during manual partitioning.
  * Requires partman-base (>= 114); partman-lvm (>= 57).

  [ Colin Watson ]
  * Quote $(FS_DEPENDS) in dh_gencontrol arguments to avoid gotcha when
    adding extra items to it.

  [ Updated translations ]