@@ -3,6 +3,9 @@ partman-partitioning (56) UNRELEASED; urgency=low
   [ Stephen R. Marenka]
   * Add m68k/atari support.
 
+  [ Aurelien Jarno ]
+  * disk-label.sh: add support for MIPS Malta platform.
+
  -- Stephen R. Marenka <smarenka@debian.org>  Sat, 12 Jan 2008 17:50:50 -0600
 
 partman-partitioning (55) unstable; urgency=low
